Websocket functions set, Orderdetail function set, Dashboard now shows correct numbers